--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,8 @@
         </activity>
         <activity android:name=".Main6Activity">
         </activity>
+        <activity android:name=".Main7Activity">
+        </activity>
     </application>
 
 </manifest>
